feat(lib): 构建集中化 + 注解能力决策 + 验证码/JDBC 工具提取（0.4.0）
- 构建：gradle/libs.versions.toml 版本目录 + buildSrc 约定插件
  （pepper.java-conventions / pepper.spotless）+ japicmp 二进制兼容门接入
  check；三个子项目 build.gradle.kts 去重
- 能力决策：MinMinecraftVersion 类级注解 + CapabilityAnnotationScanner/Resolver
  注册表；GuiHolder/GuiHost/PageHolderAdapter 标注 gui-host 能力；前置插件
  描述符切回 plugin.yml（api-version '1.18'）
- 提取（源自 PepperBotBindManager）：io.pepper.lib.verification.OneTimeCodeService
  一次性验证码服务（原子消费/冷却/TTL 清理/设置热替换）；storage.SqlExceptions
  （唯一冲突/繁忙分类）+ JdbcRetry（有限退避重试，纯 JDK 零依赖）
- 版本 0.3.0 → 0.4.0（apiVersion 与发布坐标同步）；BindManager 依赖与
  REQUIRED_PEPPERLIB_API 同步升级 0.4
- 测试 228 例全绿（新增 24 例），japicmp 0.2.0 基线无二进制不兼容